# azure-function-distributed-tracing

./: .env.sample  Makefile  README.md  pyproject.toml
.github/workflows/: adf_framework_distributed_tracing_amms-fc.yml
infra/: main.bicep  setup.sh
src/api/: app.py  handler.py
src/function/: durable_function.py  function_app.py  health.py  host.json  observability_exporters.py  regular_function.py  requirements.txt
src/function-orchestrator/: function_app.py  requirements.txt  test_blueprint.py
src/function/handlers/: __init__.py
