[tool.poetry]
name = "azure-function-distributed-tracing"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Ranson <jranson@microsoft.com>", "Tamara Rahimi <tamararahimi@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
