[tool.poetry]
name = "azure-function-distributed-tracing"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Ranson <jranson@microsoft.com>", "Tamara Rahimi <tamararahimi@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-functions = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
black = "^21.12b0"
isort = "^5.10.3"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"